--- a/vendas/package.json
+++ b/vendas/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "18.2.0",
     "react-native": "0.73.3",
+    "react-native-linear-gradient": "^2.8.3",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
