--- a/vendas/package.json
+++ b/vendas/package.json
@@ -13,6 +13,7 @@
     "react": "18.2.0",
     "react-native": "0.73.3",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-vector-icons": "^10.2.0",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
@@ -24,6 +25,7 @@
     "@react-native/metro-config": "0.73.4",
     "@react-native/typescript-config": "0.73.1",
     "@types/react": "^18.2.6",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "@types/styled-components-react-native": "^5.2.5",
     "babel-jest": "^29.6.3",
