--- a/vendas/package.json
+++ b/vendas/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "react": "18.2.0",
     "react-native": "0.73.3",
     "react-native-linear-gradient": "^2.8.3",
