feat: insert redux

--- a/vendas/package.json
+++ b/vendas/package.json
@@ -10,11 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.7.0",
     "axios": "^1.9.0",
     "react": "18.2.0",
     "react-native": "0.73.3",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-vector-icons": "^10.2.0",
+    "react-redux": "^9.2.0",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
