--- a/vendas/package.json
+++ b/vendas/package.json
@@ -10,11 +10,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
     "@reduxjs/toolkit": "^2.7.0",
     "axios": "^1.9.0",
     "react": "18.2.0",
     "react-native": "0.73.3",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "^3.27.0",
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.2.0",
     "styled-components": "^6.1.8"
