--- a/vendas/package.json
+++ b/vendas/package.json
@@ -39,6 +39,7 @@
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "@types/styled-components-react-native": "^5.2.5",
+    "axios-mock-adapter": "^2.1.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.7.0",
