--- a/vendas/package.json
+++ b/vendas/package.json
@@ -34,6 +34,7 @@
     "@react-native/eslint-config": "0.73.2",
     "@react-native/metro-config": "0.73.4",
     "@react-native/typescript-config": "0.73.1",
+    "@testing-library/react-native": "^13.2.0",
     "@types/jest": "^30.0.0",
     "@types/react": "^18.2.6",
     "@types/react-native-vector-icons": "^6.4.18",
